--- a/.github/workflows/session4-main.yml
+++ b/.github/workflows/session4-main.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploying to surge
     
-    steps
+    steps:
       - uses: actions/checkout@v2
       - name: Install Node.js
       - uses: actions/setup-node@v2-beta
