--- a/.github/workflows/session4-main.yml
+++ b/.github/workflows/session4-main.yml
@@ -9,17 +9,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install Node.js
-      - uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2-beta
         with:
-        node-version: 12
+         node-version: 12
       - name: GitHub Action for Yarn
         uses: Borales/actions-yarn@2.1.0
         with:
-        #yarn Command
-        cmd: Install #npm install / yarn install
+          #yarn Command
+          cmd: Install #npm install / yarn install
       - name: Creating build
         run: yarn build
       - name: Installaiton surge
         run: npm Install -g surge
       - name: Run surge / deploying on surge
-        run: Surge ./build session4-haroon.surge.sh --token ${{secreats.SESSION4_TOKEN}}
+        run: surge ./build session4-haroon.surge.sh --token ${{secreats.SESSION4_TOKEN}}
