--- a/.github/workflows/session4-main.yml
+++ b/.github/workflows/session4-main.yml
@@ -13,7 +13,7 @@ jobs:
         with:
          node-version: 12
       - name: GitHub Action for Yarn
-        uses: Borales/actions-yarn@2.0.0
+        uses: Borales/actions-yarn@v2
         with:
           #yarn Command
           cmd: Install #npm install / yarn install
