--- a/.github/workflows/session4-main.yml
+++ b/.github/workflows/session4-main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: Borales/actions-yarn@v2.1.0
         with:
           #yarn Command
-          cmd: Install #npm install / yarn install
+          cmd: install #npm install / yarn install
       - name: Creating build
         run: yarn build
       - name: Installaiton surge
